# task-management-api

./: Makefile  build.sh  docker-compose.yml  logs.sh  restart.sh  start.sh  stop.sh
backend/: .env.example  .gitignore  QUICKSTART.md  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  health.py
backend/app/core/: logging.py  middleware.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  baseModel.py  comment.py  notification.py  project.py  task.py  user.py
backend/app/repositories/: __init__.py  base.py  user.py
backend/app/schemas/: __init__.py  auth.py  comment.py  notification.py  project.py  task.py  token.py  user.py
backend/app/services/: user_service.py
backend/app/tasks/: celery_app.py
backend/scripts/: init_db.py  seed_data.py
backend/tests/: __init__.py
docker/: backend.Dockerfile  docker-compose.yml  entrypoint.sh  frontend.Dockerfile  init-db.sh  nginx.Dockerfile  nginx.conf  postgres.Dockerfile  redis.Dockerfile  redis.conf
docs/: project_structure.txt
frontend/: .dockerignore  next.config.ts  package-lock.json  package.json  setup-frontend.sh
